[package]
name = "db-tests"
version = "0.1.0"
authors = ["Philip Jenvey <pjenvey@underboss.org>"]
edition = "2018"

[dependencies]
#diesel = { version = "1.4.2", features = ["mysql", "r2d2"] }
env_logger = "0.6.1"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "744ece9", features = ["compat"] }
# TODO: switch back to default (use_ring) after the actix-web 1.0 upgrade
#hawk = { version = "3.0.0", default_features = false, features = ["use_openssl"] }
rand = "0.6.5"
syncstorage = { version = "0.1.0", path = "../", features = ["db_test"] }
